# FoveaEnv

./: Dockerfile  README.md  app.py  grader.py  inference.py  pyproject.toml  requirements.txt  server.py  test_basic.py
baselines/: grading_agent.py  random_agent.py
logs/PPO_1/: events.out.tfevents.1775647797.LAPTOP-HCBANO4P.21000.0
logs/PPO_2/: events.out.tfevents.1775647938.LAPTOP-HCBANO4P.6228.0
logs/PPO_3/: events.out.tfevents.1775652727.LAPTOP-HCBANO4P.22300.0
server/: app.py
