
[project]
name = "fovea-env"
version = "1.0.0"
description = "Privacy-aware attention navigation benchmark for resource-constrained RL agents"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn==0.30.0",
    "pydantic==2.7.0",
    "openai==1.30.0",
    "numpy==1.26.4",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.openenv]
name = "fovea-env"
version = "1.0.0"
entry_point = "server:app"
framework = "fastapi"
port = 7860

[tool.openenv.modes.server]
command = "uvicorn server:app --host 0.0.0.0 --port 7860"
port = 7860

[tool.openenv.modes.inference]
command = "python inference.py"
requires_env = ["API_BASE_URL", "MODEL_NAME", "HF_TOKEN"]